change theme to butterfly

--- a/source/_posts/新建博客记录.md
+++ b/source/_posts/新建博客记录.md
@@ -2,6 +2,10 @@
 title: 新建博客记录
 date: 2021-02-17 13:26:32
 tags:
+  - Hexo
+  - Blog
+categories: Blog
+description: 这次真的不再折腾了,博客搭建记录。
 ---
 
 > **这次真的不再折腾了**
